--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Login Page</title>
+        <title>About Page</title>
         <link rel="stylesheet" href="css/styles.css">
     </head>
 
